--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "homepage": "https://github.com/MZ2288/word_art#readme",
   "devDependencies": {
+    "dotenv": "^6.0.0",
+    "dotenv-webpack": "^1.5.7",
+    "lodash": "^4.17.10",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.10"
   }
 }
