--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
+    "eslint": "^5.2.0",
     "lodash": "^4.17.10",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
