--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 {
   "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+  },
   "env": {
     "shared-node-browser": true,
-    "es6": true
+    "es6": true,
+    "node": true
   }
 }
