--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,15 @@
   "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module",
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-console": "off"
   },
   "env": {
     "shared-node-browser": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "browser": true
   }
 }
