--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^5.2.0",
     "lodash": "^4.17.10",
     "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
